@@ -1,65 +1,64 @@
-# Secure Banking System (Java/JavaFX)
+# AlphaBiz Loyalty Program Web Portal (React/Node.js/MongoDB)
 
-![Java](https://img.shields.io/badge/Java-21%2B-blue)
-![JavaFX](https://img.shields.io/badge/JavaFX-24%2B-orange)
-![Security](https://img.shields.io/badge/Security-Protocols-green)
+![React](https://img.shields.io/badge/React-18%2B-blue)
+![Node.js](https://img.shields.io/badge/Node.js-18%2B-green)
+![MongoDB](https://img.shields.io/badge/MongoDB-NoSQL-brightgreen)
+![Tailwind CSS](https://img.shields.io/badge/TailwindCSS-Styling-blueviolet)
 
-This project involves the design and implementation of secure communication protocols for a banking system consisting of a bank server and multiple ATM clients. The system ensures secure authentication, key distribution, and encrypted transactions while maintaining an encrypted audit log of all activities.
-## Features
-- **Secure Authentication Protocol**:
-  - Two-layer authentication using shared keys and derived master secrets
-  - Mutual authentication between ATM clients and bank server
+---
 
-- **Key Management**:
-  - Authenticated key distribution protocol to establish Master Secret
-  - Key derivation function to create encryption and MAC keys
+## 🧾 Project Overview
 
-- **Secure Transactions**:
-  - Encrypted and integrity-protected transactions for:
-    - Balance inquiries
-    - Deposits
-    - Withdrawals
-  - Message Authentication Codes (MAC) for all communications
+This project simulates a loyalty program for a mock company, **AlphaBiz**, developed as part of the **CPS714 - Software Engineering** course.
 
-- **Audit Logging**:
-  - Encrypted record of all customer actions
-  - Includes customer ID, action type, and timestamp
+The portal rewards clients for:
 
- 
-## NetBeans Setup Guide
+- Product purchases  
+- Software subscriptions  
+- Participation in business development events  
 
-### Prerequisites
-- NetBeans IDE 18+ (with Java support)
-- Java SE Development Kit 21
-- JavaFX SDK 24
+Clients can redeem accumulated points for:
 
-### Installation Steps
+- Discounts on services  
+- Premium feature access  
+- Exclusive business tools and resources  
 
-1. **Install JDK 21**
-   - Download from [Oracle JDK 21](https://www.oracle.com/java/technologies/downloads/#java21)
-   - Set as default JDK in NetBeans:
-     ```
-     Tools → Java Platforms → Add JDK...
-     ```
+The system includes:
 
-2. **Install JavaFX 24 SDK**
-   - Download from [Gluon JavaFX](https://gluonhq.com/products/javafx/)
-   - Extract to a permanent location (e.g., `C:\javafx-sdk-24`)
+- A **client-facing portal** to track and redeem rewards  
+- An **admin dashboard** for managing rewards, engagement, and performance
 
-3. **Configure NetBeans for JavaFX**
-   - Go to:
-     ```
-     File → Project Properties → Libraries
-     ```
-   - Add these VM Options:
-     ```
-     --module-path="path/to/javafx-sdk-24/lib" --add-modules=javafx.controls,javafx.fxml
-     ```
-   - Example for Windows:
-     ```
-     --module-path="C:\javafx-sdk-24\lib" --add-modules=javafx.controls,javafx.fxml
-     ```
+---
 
-4. **Clone and Import Project**
-   ```bash
-   git clone [repository-url]
+## 🛠️ Sub-Project: Loyalty Points & Rewards System
+
+### 👥 Team: Loyalty & Rewards
+
+### ✨ Key Features
+
+- **Points Accumulation**  
+  Clients earn points based on interactions like purchases, subscriptions, and event participation.
+
+- **Reward Redemption**  
+  Points can be used for discounts, premium features, or exclusive tools.
+
+- **Engagement Bonuses**  
+  Users get bonus points for attending webinars, filling surveys, or interacting with customer support.
+
+---
+
+## 🖼️ Screenshots
+
+> *(Add your actual screenshots in the `images/` directory and update the links below)*
+
+### 🔹 Client Dashboard
+![Client Dashboard](images/client-dashboard.png)
+
+### 🔹 Reward Redemption Page
+![Reward Redemption](images/reward-redemption.png)
+
+### 🔹 Admin Panel
+![Admin Panel](images/admin-panel.png)
+
+
+
